--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_URL = http://localhost:8000
+REACT_APP_API_URL = http://backend-production-373a0.up.railway.app
 REACT_APP_SERVICE_ID = service_6di54tj
 REACT_APP_TEMPLATE_ID = template_h8h9q48
 REACT_APP_USER_ID = AhDgqsDb0b-i6EeiX
