--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   backend:
     build: ./backend
@@ -8,9 +6,16 @@ services:
     env_file:
       - ./backend/.env
     volumes:
-      - ./backend/tmp:/app/tmp
+      - ripley_data:/app/ripley_output
     depends_on:
       - frontend
+    deploy:
+      resources:
+        limits:
+          memory: 8G
+    
+    
+  
 
   frontend:
     build: ./frontend
@@ -18,3 +23,5 @@ services:
       - "3000:80"
     env_file:
       - ./frontend/.env
+volumes:
+  ripley_data:
